refactor: update AdminUserServiceTest to use getFirst() for UserRow assertions